--- a/src/main/resources/static/application.css
+++ b/src/main/resources/static/application.css
@@ -4,7 +4,18 @@ html, body {
 }
 
 main {
-  height: 80%;
+  height: auto;
+  padding-bottom: 50px;
+  margin-bottom: 60px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  padding: 15px;
+  background-color: #cccccc;
 }
 
 .top-carouselScreen .item {
