--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet"
           href="../static/application.css"
           th:href="@{/application.css}" />
-    <title>layout</title>
+    <title>dorenisuru?</title>
   </head>
   <body>
     <header>
@@ -35,7 +35,6 @@
       </div>
     </main>
     <footer class="text-center text-muted">
-      <hr />
       Powered by Eunika Inc.
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"
