--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
           <div class="item">
             <img th:src="@{/image/carousel-recreation.jpg}" alt="photo3">
             <div class="carousel-caption">
-              <h3>レクリエーションの企画、ゴルフかな？<br/>ボーリングかな？</h3>
+              <h3>来月のゴルフコンペ、誰が参加できるかな？</h3>
             </div>
           </div>
         </div>
@@ -44,7 +44,9 @@
       <div class="container">
         <div class="text-center">
           <h3 class="top-suggest">どれにする？ みんなにきいてみよう！</h3>
-          <a th:href="@{/topics/add}" class="btn btn-primary btn-lg">&emsp;トピックをつくる&emsp;</a>
+          <a th:href="@{/topics/add}" class="btn btn-primary btn-lg">
+            <i class="fa fa-comment-o"></i>トピックをつくる
+          </a>
         </div>
       </div>
     </div>
