--- a/src/main/resources/static/application.css
+++ b/src/main/resources/static/application.css
@@ -13,9 +13,11 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 50px;
-  padding: 15px;
-  background-color: #cccccc;
+  height: 35px;
+  padding: 10px;
+  background-color: #555555;
+  color: #aaaaaa;
+  font-size: 90%;
 }
 
 .btn {
@@ -60,4 +62,8 @@ footer {
 
 .top-suggest {
   margin: 50px;
+}
+
+.topic-comment {
+  background-color: #fffff0;
 }
