--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -34,7 +34,7 @@
         contents
       </div>
     </main>
-    <footer class="text-center text-muted">
+    <footer class="text-center">
       Powered by Eunika Inc.
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"
