--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -30,6 +30,7 @@
       </nav>
     </header>
     <main>
+      <div th:replace="_notice_message :: message"></div>
       <div layout:fragment="contents">
         contents
       </div>
