--- a/src/main/resources/templates/topics/show.html
+++ b/src/main/resources/templates/topics/show.html
@@ -8,7 +8,7 @@
     <div layout:fragment="contents">
       <div class="container">
         <div class="page-header">
-          <h1 th:text="${topic.title}"><i class="fa fa-comment-o"></i>トピックのタイトル</h1>
+          <h2 th:text="${topic.title}"><i class="fa fa-comment-o"></i>トピックのタイトル</h2>
         </div>
         <div class="well" th:utext="${#h.br(topic.contents)}">トピックのコンテンツ</div>
         <table class="table table-striped table-bordered">
@@ -42,9 +42,14 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn btn-default"><i class="fa fa-pencil"></i>このトピックの内容を編集する</a>
-        &emsp;
-        <a href="#" class="btn btn-danger" onclick="return confirm('削除しますか？');"><i class="fa fa-trash-o"></i>このトピックを削除する</a>
+        <div class="lineForms">
+          <a href="#" class="btn btn-default"><i class="fa fa-pencil"></i>このトピックを編集する</a>
+          <form th:action="@{/topics/{hash}(hash=${topic.hash})}" th:method="delete">
+            <button type="submit" class="btn btn-danger" onclick="return confirm('みんなからの回答など、すべてのデータが削除されます。削除しますか？');">
+              <i class="fa fa-trash-o"></i>このトピックを削除する
+            </button>
+          </form>
+        </div>
       </div>
 
       <div id="modal-area" data-keyboard="true" tabindex="-1" class="modal fade">
@@ -70,7 +75,6 @@
             </div>
             <div class="modal-footer">
               <a href="#" class="btn btn-primary"><i class="fa fa-commenting-o"></i>回答</a>
-              <a href="#" class="btn btn-danger"><i class="fa fa-trash-o"></i>回答を削除</a>
             </div>
           </div>
         </div>
