--- a/src/main/resources/static/application.css
+++ b/src/main/resources/static/application.css
@@ -25,6 +25,15 @@ footer {
   margin-bottom: 0;
 }
 
+.errorPagePanel {
+  margin: 50px 0;
+}
+
+.errorPagePanel .panel-body {
+  font-size: 2rem;
+  margin: 20px;
+}
+
 .btn {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
