--- a/src/main/resources/templates/topics/show.html
+++ b/src/main/resources/templates/topics/show.html
@@ -10,7 +10,9 @@
         <div class="page-header">
           <h2 th:text="${topic.title}"><i class="fa fa-comment-o"></i>トピックのタイトル</h2>
         </div>
-        <div class="well" th:utext="${#h.br(topic.contents)}">トピックのコンテンツ</div>
+        <div class="well" th:unless="${#strings.isEmpty(topic.contents)}" th:utext="${#h.br(topic.contents)}">
+          トピックのコンテンツ
+        </div>
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
@@ -42,10 +44,12 @@
             </div>
           </div>
         </div>
-        <div class="lineForms">
-          <a href="#" class="btn btn-default"><i class="fa fa-pencil"></i>このトピックを編集する</a>
+        <div class="stackableHorizontal">
+          <a class="btn btn-default" th:href="@{/topics/{hash}/edit(hash=${topic.hash})}">
+            <i class="fa fa-pencil"></i>このトピックを編集する
+          </a>
           <form th:action="@{/topics/{hash}(hash=${topic.hash})}" th:method="delete">
-            <button type="submit" class="btn btn-danger" onclick="return confirm('みんなからの回答など、すべてのデータが削除されます。削除しますか？');">
+            <button type="submit" class="btn btn-danger" onclick="return confirm('このトピックのすべてのデータが失われます。削除しますか？');">
               <i class="fa fa-trash-o"></i>このトピックを削除する
             </button>
           </form>
@@ -55,10 +59,8 @@
       <div id="modal-area" data-keyboard="true" tabindex="-1" class="modal fade">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" data-dismiss="modal" class="close">&times;</button>
-            </div>
             <div class="modal-body">
+              <button type="button" data-dismiss="modal" class="close"><i class="fa fa-times-circle"></i></button>
               <h5 class="text-info"><i class="fa fa-check"></i>候補から希望を選択してね！</h5>
               <table class="table table-striped table-bordered">
                 <tbody>
