--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -42,5 +42,6 @@
             th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap/min.js"
             th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+    <script th:src="@{/application.js}"></script>
   </body>
 </html>
