--- a/src/main/resources/templates/voters/add.html
+++ b/src/main/resources/templates/voters/add.html
@@ -8,7 +8,7 @@
     <div layout:fragment="contents">
       <div class="container">
         <div class="page-header">
-          <h2><i class="fa fa-comments-o"></i>トピックへの回答</h2>
+          <h3><i class="fa fa-comments-o"></i>『<span th:text="${topic.title}">トピック</span>』への回答</h3>
           <small class="text-muted">名前を記入して、候補から希望を選択してね！</small>
         </div>
         <form class="form-horizontal"
