--- a/src/main/resources/templates/voters/_voters-form.html
+++ b/src/main/resources/templates/voters/_voters-form.html
@@ -21,31 +21,33 @@
           <small class="text-warning notes">（必須）</small>
         </label>
         <div class="col-md-10">
-          <table class="table table-striped table-bordered">
-            <tbody>
-              <tr th:each="choice : ${topic.choices}">
-                <td th:text="${choice.text}">1/1(月)</td>
-                <td>
-                  <div class="btn-group btn-group-justified"
-                       data-toggle="buttons"
-                       th:with="fieldName='choiceFeelings[__${choice.id}__]'">
-                    <label class="btn btn-default">
-                      <input type="radio" value="NG" th:field="*{__${fieldName}__}" />
-                      <i class="fa fa-lg fa-thumbs-o-down text-danger"></i>
-                    </label>
-                    <label class="btn btn-default">
-                      <input type="radio" value="Unknown" th:field="*{__${fieldName}__}" />
-                      <i class="fa fa-lg fa-minus text-muted"></i>
-                    </label>
-                    <label class="btn btn-default">
-                      <input type="radio" value="OK" th:field="*{__${fieldName}__}" />
-                      <i class="fa fa-lg fa-thumbs-o-up text-info"></i>
-                    </label>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+              <tbody>
+                <tr th:each="choice : ${topic.choices}">
+                  <td th:text="${choice.text}">1/1(月)</td>
+                  <td>
+                    <div class="btn-group btn-group-justified"
+                         data-toggle="buttons"
+                         th:with="fieldName='choiceFeelings[__${choice.id}__]'">
+                      <label class="btn btn-default">
+                        <input type="radio" value="NG" th:field="*{__${fieldName}__}" />
+                        <i class="fa fa-lg fa-thumbs-o-down text-danger"></i>
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" value="Unknown" th:field="*{__${fieldName}__}" />
+                        <i class="fa fa-lg fa-minus text-muted"></i>
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" value="OK" th:field="*{__${fieldName}__}" />
+                        <i class="fa fa-lg fa-thumbs-o-up text-info"></i>
+                      </label>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <span class="help-block" th:if="${#fields.hasErrors('choiceFeelings')}" th:errors="*{choiceFeelings}"></span>
         </div>
       </div>
