--- a/src/main/resources/templates/voters/_voters-form.html
+++ b/src/main/resources/templates/voters/_voters-form.html
@@ -25,20 +25,20 @@
             <table class="table table-striped table-bordered">
               <tbody>
                 <tr th:each="choice : ${topic.choices}">
-                  <td th:text="${choice.text}">1/1(月)</td>
-                  <td>
+                  <td class="vote-table-choices-text" th:text="${choice.text}">1/1(月)</td>
+                  <td class="vote-table-choices-buttons">
                     <div class="btn-group btn-group-justified"
                          data-toggle="buttons"
                          th:with="fieldName='choiceFeelings[__${choice.id}__]'">
-                      <label class="btn btn-default">
+                      <label class="btn btn-default voter-choice-radio" data-toggle="tooltip" title="NG">
                         <input type="radio" value="NG" th:field="*{__${fieldName}__}" />
                         <i class="fa fa-lg fa-thumbs-o-down text-danger"></i>
                       </label>
-                      <label class="btn btn-default">
+                      <label class="btn btn-default voter-choice-radio" data-toggle="tooltip" title="わからない">
                         <input type="radio" value="Unknown" th:field="*{__${fieldName}__}" />
                         <i class="fa fa-lg fa-minus text-muted"></i>
                       </label>
-                      <label class="btn btn-default">
+                      <label class="btn btn-default voter-choice-radio" data-toggle="tooltip" title="OK">
                         <input type="radio" value="OK" th:field="*{__${fieldName}__}" />
                         <i class="fa fa-lg fa-thumbs-o-up text-info"></i>
                       </label>
