--- a/src/main/resources/templates/topics/add.html
+++ b/src/main/resources/templates/topics/add.html
@@ -12,7 +12,7 @@
           <small class="text-muted">トピックをつくって、みんなにきいてみよう！</small>
         </div>
         <form class="form-horizontal" th:action="@{/topics}" th:object="${topicForm}" th:method="post">
-          <div class="col-sm-12">
+          <div class="col-md-12">
             <div th:replace="_validate_error_message :: message"></div>
             <div class="well" th:replace="topics/_topics-form :: topics-form"></div>
             <div class="form-group" th:classappend="${#fields.hasErrors('choiceText')} ? 'has-error'">
