--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div layout:fragment="contents">
-      <div id="top-carouselScreen" class="carousel slide top-carouselScreen" data-ride="carousel">
+      <div id="top_carouselScreen" class="carousel slide top_carouselScreen" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#top-carouselScreen" data-slide-to="0" class="active"></li>
-          <li data-target="#top-carouselScreen" data-slide-to="1"></li>
-          <li data-target="#top-carouselScreen" data-slide-to="2"></li>
+          <li data-target="#top_carouselScreen" data-slide-to="0" class="active"></li>
+          <li data-target="#top_carouselScreen" data-slide-to="1"></li>
+          <li data-target="#top_carouselScreen" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="item active">
@@ -26,24 +26,24 @@
             </div>
           </div>
           <div class="item">
-            <img th:src="@{/image/carousel-recreation.jpg}" alt="photo3">
+            <img th:src="@{/image/carousel-golf.jpg}" alt="photo3">
             <div class="carousel-caption">
               <h3>来月のゴルフコンペ、誰が参加できるかな？</h3>
             </div>
           </div>
         </div>
-        <a class="left carousel-control" href="#top-carouselScreen" data-slide="prev">
+        <a class="left carousel-control" href="#top_carouselScreen" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#top-carouselScreen" role="button" data-slide="next">
+        <a class="right carousel-control" href="#top_carouselScreen" role="button" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
       <div class="container">
         <div class="text-center">
-          <h3 class="top-suggest">どれにする？ みんなにきいてみよう！</h3>
+          <h3 class="top_suggest">どれにする？ みんなにきいてみよう！</h3>
           <a th:href="@{/topics/add}" class="btn btn-primary btn-lg">
             <i class="fa fa-comment-o"></i>トピックをつくる
           </a>
