--- a/src/main/resources/templates/voters/_voters-form.html
+++ b/src/main/resources/templates/voters/_voters-form.html
@@ -25,8 +25,8 @@
             <table class="table table-striped table-bordered">
               <tbody>
                 <tr th:each="choice : ${topic.choices}">
-                  <td class="vote-table-choices-text" th:text="${choice.text}">1/1(月)</td>
-                  <td class="vote-table-choices-buttons">
+                  <td class="voters_voteTableChoicesText" th:text="${choice.text}">1/1(月)</td>
+                  <td class="voters_voteTableChoicesButtons">
                     <div class="btn-group btn-group-justified"
                          data-toggle="buttons"
                          th:with="fieldName='choiceFeelings[__${choice.id}__]'">
